--- a/MduiBlazor/Components/Input/MduiRadio.razor
+++ b/MduiBlazor/Components/Input/MduiRadio.razor
@@ -3,7 +3,7 @@
 @typeparam TValue
 
 <label class="mdui-radio">
-    <input type="radio" id="@Id" name="@(Name??RadioGroup?.RadioName)" class="@Class" style="@Style"
+    <input type="radio" name="@(Name??RadioGroup?.RadioName)" class="@Class" style="@Style"
         disabled="@Disabled" @attributes="@AdditionalAttributes" checked="@Checked" value="@Value"
         @onchange="@OnRadioChanged" />
     <i class="mdui-radio-icon"></i>
