--- a/MduiBlazor/Components/Input/MduiRadioGroup.razor
+++ b/MduiBlazor/Components/Input/MduiRadioGroup.razor
@@ -2,7 +2,7 @@
 @inherits MduiInputBase<TValue>
 @typeparam TValue
 
-<div @ref="@Element" role="radiogroup" class="@RadioGroupClass" style="@Style" @attributes="@AdditionalAttributes">
+<div @ref="@Element" role="radiogroup" class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     <CascadingValue Name="RadioGroup" Value="@this" IsFixed>
         @ChildContent
     </CascadingValue>
