--- a/mdui/src/components/slider/index.less
+++ b/mdui/src/components/slider/index.less
@@ -15,10 +15,9 @@
 .mdui-slider {
   position: relative;
   display: block;
-  width: 100%;
   height: 36px;
-  padding-right: 15px;
-  padding-left: 15px;
+  margin-right: 15px;
+  margin-left: 15px;
 
   input[type="range"] {
     position: absolute;
