--- a/mdui/src/components/ripple/index.less
+++ b/mdui/src/components/ripple/index.less
@@ -9,49 +9,47 @@
   overflow: hidden;
   cursor: pointer;
   user-select: none;
-}
 
-/* Ripple */
-.mdui-ripple-wave {
-  position: absolute !important;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  margin: 0;
-  padding: 0;
-  font-size: 0;
-  background-color: rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  transform: translate3d(0, 0, 0) scale(0);
-  transition-duration: 1400ms;
-  pointer-events: none;
+  /* Ripple */
+  &::after {
+    position: absolute !important;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-image: radial-gradient(circle, #000 10%, transparent 10.01%);
+    background-repeat: no-repeat;
+    background-position: 50%;
+    transform: scale(10, 10);
+    opacity: 0;
+    transition: transform .3s, opacity 1s;
+    content: "";
+    pointer-events: none;
+  }
+
+  &:active::after {
+    transform: scale(0, 0);
+    opacity: 0.35;
+    transition: 0s;
+  }
 }
 
 /* 有背景色的默认使用白色涟漪 */
 .mdui-ripple[class*="mdui-color-"] {
-  .mdui-ripple-wave {
-    background-color: rgba(255, 255, 255, 0.3);
+  &::after {
+    background-image: radial-gradient(circle, #fff 10%, transparent 10.01%);
   }
 }
 
 /* 白色涟漪 */
-.mdui-ripple-white .mdui-ripple-wave {
-  background-color: rgba(255, 255, 255, 0.3) !important;
+.mdui-ripple-white.mdui-ripple::after {
+  background-image: radial-gradient(circle, #fff 10%, transparent 10.01%) !important;
 }
 
 /* 黑色涟漪 */
-.mdui-ripple-black .mdui-ripple-wave {
-  background-color: rgba(0, 0, 0, 0.1) !important;
-}
-
-.mdui-ripple-wave-fill {
-  opacity: 0.35;
-  transition-duration: 300ms;
-}
-
-.mdui-ripple-wave-out {
-  opacity: 0;
-  transition-duration: 600ms;
+.mdui-ripple-black.mdui-ripple::after {
+  background-image: radial-gradient(circle, #000 10%, transparent 10.01%) !important;
 }
 
 
@@ -66,15 +64,16 @@
     @colorName: extract(@globalPrimaryColors, @counter-color);
 
     // 指定涟漪颜色
-    .mdui-ripple-@{colorName} when not (@colorName = null) {
-      .mdui-ripple-wave {
+    .mdui-ripple-@{colorName} when not (@colorName =null) {
+      &.mdui-ripple::after {
         @color: 'color-@{colorName}-500';
 
-        background-color: rgba(red(@@color), green(@@color), blue(@@color), 0.3) !important;
+        background-image: radial-gradient(circle, rgb(red(@@color), green(@@color), blue(@@color)) 10%, transparent 10.01%) !important;
       }
     }
 
   }
+
   .loop-primary-theme(length(@globalPrimaryColors));
 }
 
@@ -85,8 +84,9 @@
  * =============================================================================
  */
 .layout-theme({
+
   // 深色主题下使用白色涟漪
-  .mdui-ripple-wave {
-    background-color: rgba(255, 255, 255, 0.3);
+  .mdui-ripple::after {
+    background-image: radial-gradient(circle, #fff 10%, transparent 10.01%);
   }
 });
