--- a/MduiBlazor.Server/Pages/_Host.cshtml
+++ b/MduiBlazor.Server/Pages/_Host.cshtml
@@ -33,6 +33,7 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="_content/MduiBlazor/js/mdui.min.js"></script>
 </body>
 
 </html>
