--- a/MduiBlazor.Shared/Pages/Bars.razor
+++ b/MduiBlazor.Shared/Pages/Bars.razor
@@ -7,12 +7,10 @@
     <MduiToolbarSpace />
     <MduiIconButton Icon="search" />
     <MduiIconButton Icon="refresh" />
-        <MduiMenu Title="Menu">
-            <ChildContent>
-                <MduiMenuItem>Help & feedback</MduiMenuItem>
-                <MduiMenuItem Disabled>Settings</MduiMenuItem>
-                <MduiDivider />
-                <MduiMenuItem>Sign out</MduiMenuItem>
-            </ChildContent>
-        </MduiMenu>
+    <MduiMenu Icon="more_vert" AlignEnd>
+        <MduiMenuItem>Help & feedback</MduiMenuItem>
+        <MduiMenuItem Disabled>Settings</MduiMenuItem>
+        <MduiDivider />
+        <MduiMenuItem>Sign out</MduiMenuItem>
+    </MduiMenu>
 </MduiToolbar>
