--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -6,5 +6,6 @@
     <MduiNavMenuItem Href="counter" Icon="add">Counter</MduiNavMenuItem>
     <MduiNavMenuItem Href="fetchdata">Fetch data</MduiNavMenuItem>
     <MduiNavMenuItem Href="inputs">Form & Inputs</MduiNavMenuItem>
+    <MduiNavMenuItem Href="menus">Menus</MduiNavMenuItem>
     <MduiNavMenuItem Href="typography">Typography</MduiNavMenuItem>
 </MduiNavMenu>
