--- a/MduiBlazor/Components/Menu/MduiMenu.razor
+++ b/MduiBlazor/Components/Menu/MduiMenu.razor
@@ -4,15 +4,28 @@
 <div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
     @if (ActivatorContent != null)
     {
-        <label mdui-menu="@Options">
+        <label @onclick="@OnActivatorClicked" @onblur="@OnBlur">
             @ActivatorContent
         </label>
     }
     else
     {
-        <MduiButton mdui-menu="@Options">@Title</MduiButton>
+        @if (!string.IsNullOrWhiteSpace(Title))
+        {
+            <MduiButton @onclick="@OnActivatorClicked" @onblur="@OnBlur">
+                @Title
+                @if (!string.IsNullOrWhiteSpace(Icon))
+                {
+                    <MduiIcon Name="@Icon" />
+                }
+            </MduiButton>
+        }
+        else if (!string.IsNullOrWhiteSpace(Icon))
+        {
+            <MduiIconButton Icon="@Icon" @onclick="@OnActivatorClicked" @onblur="@OnBlur" />
+        }
     }
-    <ul id="@id" class="mdui-menu">
+    <ul class="@MenuListClass">
         @ChildContent
     </ul>
 </div>
