--- a/MduiBlazor.Shared/Shared/MainLayout.razor
+++ b/MduiBlazor.Shared/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<MduiLayout UseMduiTypo>
+<MduiLayout UseMduiTypo Style="overflow-x: hidden;">
     <MduiAppbar Fixed>
         <MduiToolbar Color="@Colors.Theme.Primary">
             <MduiIconButton Icon="menu" OnClick="_=>open=!open" />
@@ -9,16 +9,11 @@
             <a href="https://github.com/gaofen13/mdui-blazor" target="_blank">About</a>
             <MduiIconButton Icon="search" />
             <MduiIconButton Icon="refresh" OnClick="@ReflashPage" />
-            <MduiMenu>
-                <ActivatorContent>
-                    <MduiIconButton Icon="more_vert" />
-                </ActivatorContent>
-                <ChildContent>
-                    <MduiMenuItem>Help & feedback</MduiMenuItem>
-                    <MduiMenuItem Disabled>Settings</MduiMenuItem>
-                    <MduiDivider />
-                    <MduiMenuItem>Sign out</MduiMenuItem>
-                </ChildContent>
+            <MduiMenu Icon="more_vert" AlignEnd>
+                <MduiMenuItem>Help & feedback</MduiMenuItem>
+                <MduiMenuItem Disabled>Settings</MduiMenuItem>
+                <MduiDivider />
+                <MduiMenuItem>Sign out</MduiMenuItem>
             </MduiMenu>
         </MduiToolbar>
     </MduiAppbar>
